 # [#22936] Update Hathor with permissions changes from Tracker #22529 (Andrea Tarr)
 # [#22951] PHP semi colon closing issue. (Vasanth V, bill richardson)
 # [#22519] Image caption does not work (Jean-Marie Simonnet)
 # [#22960] Sliders within sliders do not work
 # [#21300] Problem with Options Lightbox and Sessions (Omar Ramos)

20-Oct-2010 Andrew Eddie
 # Fixed issue [#22251] params field in table #__template_styles too small (Jason D'Souza, Bill Richardson, Christophe Demko).

19-Oct-2010 Andrew Eddie
 # Fixed issue [#21635] fail to copy menu item (Brian Teeman, Mathavan Jeyadev, Jean-Marie Simonet, Louis Landry).

-------------------- 1.6.0 Beta12 Release [18-Oct-2010] ------------------

18-Oct-2010 Andrew Eddie
 # Reverting changes in [#22659] (causing very annoying screen flicker).

18-Oct-2010 Christophe Demko
 # [#22802] Contact category feed is blank (Elin Waring)
 # [#22918] install file not working when using method "update" (marius van rijnsoever)
 # [#21345] Form field Select list does not handle <optgroup>
 # Fix JHtmlSelect class
 # [#22843] Enable the capacity to use specific help url when editing a plugin or a template style
 # [#22833] The com_modules component cannot redirect help to specific international help site
 # [#21946] Redirect component produces error (Joseph LeBlanc, bill richardson)

16-Oct-2010 Jean-Marie Simonet
 # [#21635] fail to copy menu item. Thanks Mathavan and Louis
 $ [#22914] COM_SEARCH_EXACT_PHRASE doesn't need the colon at end. Thanks Bill.
 # Reverting [#21635] as it breaks re-save article when debug on.
 
15-Oct-2010 Jean-Marie Simonet
 # Making core site templates installable/uninstallable. Changed protected template from milkyway to beez2.

14-Oct-2010 Louis Landry
 ^ Decoupled JPATH_ADMINISTRATOR from JApplication::initialise() method call when loading framework language file.
 # [#22825] Duplicated queries in global configuration.  (Thanks to Dennis Hermacki)