@@ -9,6 +9,7 @@
 // no direct access
 defined('_JEXEC') or die;
 
+jimport('joomla.language.helper');
 jimport('joomla.plugin.plugin');
 
 /**
@@ -20,27 +21,29 @@ jimport('joomla.plugin.plugin');
  */
 class plgSystemLanguageFilter extends JPlugin
 {
-	public static $mode_sef;
-	public static $tag;
-	public static $sefs;
-	public static $lang_codes;
+	protected static $mode_sef;
+	protected static $tag;
+	protected static $sefs;
+	protected static $lang_codes;
 
-	public static $default_lang;
-	public static $default_sef;
+	protected static $default_lang;
+	protected static $default_sef;
+
+	private static $_user_lang_code;
 
 	public function __construct(&$subject, $config)
 	{
 		$app = JFactory::getApplication();
+		$router = $app->getRouter();
+
+		// setup language data
+		self::$mode_sef 	= ($router->getMode() == JROUTER_MODE_SEF) ? true : false;
+		self::$sefs 		= JLanguageHelper::getLanguages('sef');
+		self::$lang_codes 	= JLanguageHelper::getLanguages('lang_code');
+		self::$default_lang = JComponentHelper::getParams('com_languages')->get('site', 'en-GB');
+		self::$default_sef 	= self::$lang_codes[self::$default_lang]->sef;
 		if ($app->isSite()) {
 			$app->setLanguageFilter(true);
-			$router = $app->getRouter();
-
-			// setup language data
-			self::$mode_sef 	= ($router->getMode() == JROUTER_MODE_SEF) ? true : false;
-			self::$sefs 		= JLanguageHelper::getLanguages('sef');
-			self::$lang_codes 	= JLanguageHelper::getLanguages('lang_code');
-			self::$default_lang = JComponentHelper::getParams('com_languages')->get('site', 'en-GB');
-			self::$default_sef 	= self::$lang_codes[self::$default_lang]->sef;
 			$uri = JFactory::getURI();
 			if (self::$mode_sef) {
 				// Get the route path from the request.
@@ -177,5 +180,78 @@ class plgSystemLanguageFilter extends JPlugin
 
 		$array = array('lang' => $sef);
 		return $array;
+	}
+	/**
+	 * before store user method
+	 *
+	 * Method is called before user data is stored in the database
+	 *
+	 * @param	array		$user	Holds the old user data.
+	 * @param	boolean		$isnew	True if a new user is stored.
+	 * @param	array		$new	Holds the new user data.
+	 *
+	 * @return	void
+	 * @since	1.6
+	 */
+	public function onUserBeforeSave($user, $isnew, $new)
+	{
+		if ($this->params->get('automatic_change', '1')=='1' && key_exists('params', $user))
+		{
+			$registry = new JRegistry();
+			$registry->loadJSON($user['params']);
+			self::$_user_lang_code = $registry->get('language');
+			if (empty(self::$_user_lang_code)) {
+				self::$_user_lang_code = self::$default_lang;
+			}
+		}
+	}
+
+
+	/**
+	 * after store user method
+	 *
+	 * Method is called after user data is stored in the database
+	 *
+	 * @param	array		$user		Holds the new user data.
+	 * @param	boolean		$isnew		True if a new user is stored.
+	 * @param	boolean		$success	True if user was succesfully stored in the database.
+	 * @param	string		$msg		Message.
+	 *
+	 * @return	void
+	 * @since	1.6
+	 */
+	public function onUserAfterSave($user, $isnew, $success, $msg)
+	{
+		if ($this->params->get('automatic_change', '1')=='1' && key_exists('params', $user) && $success)
+		{
+			$registry = new JRegistry();
+			$registry->loadJSON($user['params']);
+			$lang_code = $registry->get('language');
+			if (empty($lang_code)) {
+				$lang_code = self::$default_lang;
+			}
+			$app = JFactory::getApplication();
+			if ($lang_code == self::$_user_lang_code || !isset(self::$lang_codes[$lang_code]))
+			{
+				if ($app->isSite())
+				{
+					$app->setUserState('com_users.edit.profile.redirect',null);
+				}
+			}
+			else
+			{
+				if ($app->isSite())
+				{
+					$app->setUserState('com_users.edit.profile.redirect','index.php?Itemid='.$app->getMenu()->getDefault($lang_code)->id.'&lang='.$lang_codes[$lang_code]->sef);
+					self::$tag = $lang_code;
+				}
+
+				// Create a cookie
+				$conf = JFactory::getConfig();
+				$cookie_domain 	= $conf->get('config.cookie_domain', '');
+				$cookie_path 	= $conf->get('config.cookie_path', '/');
+				setcookie(JUtility::getHash('language'), $lang_code, time() + 365 * 86400, $cookie_path, $cookie_domain);
+			}
+		}
 	}
 }
